tests/neg/structural.scala

object test123 {  
  type A = { def a: Int }
  def f(a: A): A = a
}
